--- a/frontend/src/components/ReleaseList/index.scss
+++ b/frontend/src/components/ReleaseList/index.scss
@@ -22,13 +22,14 @@
       }
     }
 
-    @media screen and (max-width: 940px) {
+    @media screen and (max-width: 1100px) {
       flex-flow: column nowrap;
       width: 100%;
       padding: 0 2%;
 
       .SearchBar {
-        width: 100%;
+        width: 98%;
+        margin: 0 auto;
       }
 
       .ViewOptions {
