--- a/frontend/src/components/ArtistList/index.scss
+++ b/frontend/src/components/ArtistList/index.scss
@@ -5,38 +5,6 @@
   margin: 0 auto;
   width: 95%;
 
-  .ListOptions {
-    display: flex;
-    flex-flow: row nowrap;
-    margin: 0 5% 20px 5%;
-
-    .Filter {
-      margin-right: 15px;
-      flex-grow: 1;
-
-      .SelectType {
-        flex-grow: 0;
-      }
-    }
-
-    .SortBy {
-      margin-left: auto;
-    }
-
-    @media screen and (max-width: 900px) {
-      flex-flow: column nowrap;
-      margin: 0 2% 20px 2%;
-
-      .Filter {
-        width: 100%;
-      }
-
-      .SortBy {
-        margin: 20px auto 0;
-      }
-    }
-  }
-
   .Artists {
     .Artist {
       margin-bottom: 5px;
@@ -56,6 +24,11 @@
         white-space: nowrap;
         margin-right: 10px;
         flex-shrink: 0;
+
+        .NameText {
+          overflow: hidden;
+          text-overflow: '  ...';
+        }
 
         .Favorite {
           margin-left: 5px;
