frontend: make header fullwidth

--- a/frontend/src/components/Header/index.scss
+++ b/frontend/src/components/Header/index.scss
@@ -1,7 +1,6 @@
 .Header {
-  margin: 20px auto 20px auto;
-  max-width: 1100px;
-  width: 95%;
+  margin-bottom: 20px;
+  width: 100%;
 
   a {
     color: inherit;
