frontend: fix release listoptions andcompact-ify the mobile-width lists

--- a/frontend/src/components/ArtistList/index.scss
+++ b/frontend/src/components/ArtistList/index.scss
@@ -75,21 +75,11 @@
         flex-flow: row wrap;
 
         .Name {
-          margin-bottom: 5px;
           width: 100%;
         }
 
         .GenresAndNumReleases {
-          margin-left: 0;
-          width: 100%;
-
-          .TopGenres {
-            direction: ltr;
-          }
-
-          .NumReleases {
-            margin-left: auto;
-          }
+          display: none;
         }
       }
     }
