--- a/frontend/src/components/ArtistList/index.scss
+++ b/frontend/src/components/ArtistList/index.scss
@@ -1,12 +1,32 @@
 .ArtistList {
   display: flex;
   flex-flow: column nowrap;
-  max-width: 1050px;
-  margin: 0 auto;
-  width: 95%;
 
   .Artists {
+    height: calc(100vh - 120px);
+    overflow: auto;
+    width: 100%;
+
+    .Virtual {
+      position: relative;
+      width: 100%;
+
+      .VirtualRow {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+      }
+
+      margin-top: 1px;
+      margin-bottom: 20px;
+    }
+
     .Artist {
+      border-radius: 0;
+      max-width: 1050px;
+      margin: 0 auto;
+      width: 95%;
       margin-bottom: 5px;
       padding-top: 8px;
       padding-bottom: 8px;
@@ -70,8 +90,12 @@
           margin-left: 5px;
         }
       }
+    }
 
-      @media screen and (max-width: 600px) {
+    @media screen and (max-width: 600px) {
+      height: calc(100vh - 120px);
+
+      .Artist {
         flex-flow: row wrap;
 
         .Name {
