--- a/frontend/src/components/QueryList/index.scss
+++ b/frontend/src/components/QueryList/index.scss
@@ -3,9 +3,10 @@
   flex-flow: column nowrap;
 
   .Queries {
-    height: calc(100vh - 120px);
+    height: calc(100vh - 110px);
     overflow: auto;
     width: 100%;
+    margin-top: 15px;
 
     .Virtual {
       position: relative;
@@ -16,6 +17,10 @@
         top: 0;
         left: 0;
         width: 100%;
+
+        &:hover {
+          z-index: 60;
+        }
       }
 
       margin-top: 1px;
@@ -67,12 +72,14 @@
       }
     }
 
-    @media screen and (max-width: 600px) {
-      height: calc(100vh - 120px);
+    @media screen and (max-width: 900px) {
+      height: calc(100vh - 150px) !important;
+    }
 
+    @media screen and (max-width: 600px) {
       .Query {
         display: none;
       }
     }
-    }
   }
+}
