--- a/frontend/src/components/common/ListOptions/index.scss
+++ b/frontend/src/components/common/ListOptions/index.scss
@@ -4,7 +4,7 @@
   max-width: 1100px;
   width: 100%;
   padding: 0 5%;
-  margin: 0 auto 20px auto;
+  margin: 0 auto;
 
   .Filter {
     margin-right: 15px;
@@ -27,7 +27,7 @@
     }
 
     .SortBy {
-      margin: 20px auto 0;
+      margin: 10px auto 0;
     }
   }
 }
