--- a/frontend/src/components/Release/TrackList/index.scss
+++ b/frontend/src/components/Release/TrackList/index.scss
@@ -93,6 +93,14 @@
         min-width: 200px;
         width: 35%;
 
+        .TrackNumber {
+          margin-right: 4px;
+
+          &:after {
+            content: '.';
+          }
+        }
+
         .TrackTitle {
           overflow: hidden;
           text-overflow: ellipsis;
