frontend: update release list margins and padding

--- a/frontend/src/components/Release/ArtworkRelease/index.scss
+++ b/frontend/src/components/Release/ArtworkRelease/index.scss
@@ -4,7 +4,7 @@
   grid-gap: 10px;
   max-width: 1320px;
   width: 95%;
-  margin: 0 auto;
+  margin: 0 auto 15px auto;
 
   .bp3-popover-wrapper,
   .bp3-popover-target {
