--- a/frontend/src/components/Release/DetailedRelease/index.scss
+++ b/frontend/src/components/Release/DetailedRelease/index.scss
@@ -1,10 +1,10 @@
 .DetailedReleases {
   display: flex;
-  margin: 0;
+  margin: 0 0 10px;
   flex-flow: column nowrap;
 
   .Release {
-    margin: 10px auto;
+    margin: 5px auto;
     max-width: 1100px;
     width: 95%;
 
