--- a/frontend/src/components/QueryList/index.scss
+++ b/frontend/src/components/QueryList/index.scss
@@ -4,7 +4,7 @@
 
   .Queries {
     width: 100%;
-    margin-top: 15px;
+    margin: 15px 0;
 
     .SavedQuery {
       border-radius: 0;
@@ -53,10 +53,6 @@
         display: flex;
         flex-flow: row nowrap;
       }
-    }
-
-    @media screen and (max-width: 900px) {
-      height: calc(100vh - 150px) !important;
     }
 
     @media screen and (max-width: 600px) {
