--- a/frontend/src/components/Footer/index.scss
+++ b/frontend/src/components/Footer/index.scss
@@ -88,6 +88,10 @@
       text-align: center;
       font-style: italic;
     }
+
+    .Track.Active {
+      font-weight: bold;
+    }
   }
 
   @media screen and (max-width: 700px) {
@@ -112,7 +116,7 @@
 }
 
 .Footer.Expanded {
-  max-height: 800px;
+  max-height: 70%;
 }
 
 .bp3-dark .Footer {
