--- a/frontend/src/components/Release/ArtworkRelease/index.scss
+++ b/frontend/src/components/Release/ArtworkRelease/index.scss
@@ -28,8 +28,10 @@
 
       .InInbox {
         position: absolute;
-        top: 8px;
-        left: 8px;
+        top: 5px;
+        left: 5px;
+        padding: 3px;
+        border-radius: 4px;
       }
     }
 
@@ -80,4 +82,12 @@
   @media screen and (min-width: 1400px) {
     grid-template-columns: repeat(7, minmax(0, 1fr));
   }
+}
+
+.bp3-body .ArtworkReleases .InInbox {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.bp3-dark .ArtworkReleases .InInbox {
+  background-color: rgba(0, 0, 0, 0.4);
 }
