frontend: add performed by for classical composers/conductors, close #15

--- a/frontend/src/components/Release/DetailedRelease/index.scss
+++ b/frontend/src/components/Release/DetailedRelease/index.scss
@@ -44,9 +44,15 @@
           overflow: hidden;
           text-overflow: ellipsis;
           height: 18px;
+          white-space: nowrap;
 
           .InInboxIcon {
             margin-right: 5px;
+          }
+
+          h4 {
+            overflow: hidden;
+            text-overflow: ellipsis;
           }
         }
 
