--- a/frontend/src/components/Release/TrackList/index.scss
+++ b/frontend/src/components/Release/TrackList/index.scss
@@ -1,5 +1,5 @@
 .FlatTrackList {
-  margin-top: -10px;
+  margin-top: -5px;
 
   .TopArrowPointer {
     width: 0;
@@ -45,10 +45,10 @@
 }
 
 .TrackList {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   width: 100%;
   border-radius: 0;
-  padding: 0;
+  padding: 0 0 15px 0;
 
   h2,
   h3 {
