frontend: get working filter sidebars (#11); styles fucked though

--- a/frontend/src/components/Footer/index.scss
+++ b/frontend/src/components/Footer/index.scss
@@ -17,16 +17,18 @@
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
-    flex: 1 0 auto;
   }
 
   .LongMainInfo {
     margin-right: 30px;
     margin-top: 15px;
+    flex: 1 0 auto;
   }
 
   .ShortMainInfo {
     height: 50px;
+    width: calc(70% - 30px);
+    flex: 1 1 auto;
   }
 
   .CoverArt {
@@ -48,17 +50,28 @@
   .PlayTrackInfo {
     flex: 1 1 auto;
     overflow: hidden;
-
-    .TrackTitle {
-      text-overflow: ellipsis;
-      overflow: hidden;
-      margin-bottom: 4px;
-    }
+    white-space: nowrap;
 
     .TrackTitle,
     .TrackArtists {
       text-align: center;
       overflow: hidden;
+    }
+
+    .TrackTitle {
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+
+    .TrackArtists {
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+
+      .TrackArtist,
+      .DividerWord {
+        margin-top: 4px;
+      }
     }
   }
 
@@ -68,6 +81,7 @@
     align-items: center;
     margin: 0 10px;
     width: 30%;
+    flex: 1 0 auto;
 
     .TimeProgress {
       width: 100%;
@@ -108,7 +122,7 @@
 
     .ShortMainInfo {
       padding-right: 30px;
-      width: 100%;
+      width: 100% !important;
       margin-top: 15px;
     }
 
