--- a/frontend/src/components/ReleaseList/SideBars/index.scss
+++ b/frontend/src/components/ReleaseList/SideBars/index.scss
@@ -55,40 +55,81 @@
   .SideBar.Hidden {
     display: none;
   }
+}
 
-  @media screen and (max-width: 800px) {
-    // Position absolute (mimic float).
-  }
+.HideBars {
+  width: 0;
+  position: sticky;
+  z-index: 95;
 
-  .HideBars {
-    width: 22px;
+  .Vertical {
+    margin-top: 45px;
+    display: flex;
+    flex-flow: row nowrap;
+    transform: rotate(90deg);
+    transform-origin: left bottom 0;
 
-    .Vertical {
+    .HideBar {
       display: flex;
-      flex-flow: row nowrap;
-      transform: rotate(90deg);
-      transform-origin: left bottom 0;
+      flex-flow: nowrap;
+      padding: 2px 5px;
+      margin-right: 10px;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
 
-      .HideBar {
-        display: flex;
-        flex-flow: nowrap;
-        padding: 2px 5px;
-        margin-right: 10px;
-        margin-bottom: 1px;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
+      .bp3-icon {
+        margin-right: 5px;
+      }
 
-        .bp3-icon {
-          margin-right: 5px;
-        }
-
-        &:hover {
-          box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.1);
-          cursor: pointer;
-        }
+      &:hover {
+        box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.1);
+        cursor: pointer;
       }
     }
   }
+}
+
+@media screen and (max-width: 800px) {
+  .HideBars {
+    position: absolute;
+    left: 0;
+    top: 50px;
+  }
+
+  .SideBars1,
+  .SideBars2 {
+    .HideBars {
+      position: fixed;
+    }
+  }
+
+  .HideCollections .HideName {
+    span {
+      display: none;
+    }
+
+    &:after {
+      content: 'C';
+    }
+  }
+
+  .HideArtists .HideName {
+    span {
+      display: none;
+    }
+
+    &:after {
+      content: 'A';
+    }
+  }
+}
+
+.SideBars1 .HideBars {
+  left: 150px;
+}
+
+.SideBars2 .HideBars {
+  left: 300px;
 }
 
 .bp3-dark .HideBar {
